# AIStudy

./: .gitignore  __init__.py  env.env.sample  pyproject.toml  readme.md
1week/: main.py  readme.md
2week/: FAQ.xlsx  chat.py  main.py
3week/: graph.py  main.py
